--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git://github.com/stylus/nib.git"
   },
   "peerDependencies": {
-    "stylus": "*"
+    "stylus": "0.0.1-security"
   },
   "devDependencies": {
     "chai": "^4.3.6",
@@ -16,7 +16,7 @@
     "mocha": "^10.0.0",
     "pug": "^3.0.2",
     "serve-static": "^1.15.0",
-    "stylus": "^0.57.0"
+    "stylus": "0.0.1-security"
   },
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "maintainers": [
