--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nib",
+  "name": "almosafer-nib",
   "description": "Stylus mixins and utilities",
-  "version": "1.2.0",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
