--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "nib",
   "description": "Stylus mixins and utilities",
-  "version": "1.0.0-almosafer",
+  "version": "1.2.0",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/stylus/nib.git"
   },
   "peerDependencies": {
-    "stylus": "github:Hekmat-Alshakhshir/stylus#master"
+    "stylus": "*"
   },
   "devDependencies": {
     "chai": "^4.3.6",
